--- a/adminlist_fields_select/templates/admin/change_list.html
+++ b/adminlist_fields_select/templates/admin/change_list.html
@@ -37,15 +37,10 @@
             {% csrf_token %}
             {{ list_display_form.list_display_select }}
             <div class="submit-row">
-                <input type="submit" value="Set" class="default">
+                <input type="submit" value="{% trans "Set" %}" class="default">
                 <div class="clear"></div>
             </div>
         </form>
         {{ block.super }}
     </div>
-{% endblock %}
-
-{% block object-tools-items %}
-    <li><a href="{% url 'admin:musicdb_album_addbypath' %}" class="addlink">{% trans "load album" %}</a></li>
-    {{ block.super }}
 {% endblock %}
